[project]
name = "uiwiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = [
    "fastapi>=0.116.1",
    "markdown2[all]>=2.5.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyhumps>=3.8.0",
    "python-multipart>=0.0.20",
    "starlette-authlib>=0.3.12",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "fastapi-profiler>=1.4.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.12",
]
