[project]
name = "uiwiz"
version = "0.2.1"
description = "UiWiz is a framework to develop web applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.1",
    "markdown2[all]>=2.5.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyhumps>=3.8.0",
    "python-multipart>=0.0.20",
    "starlette-authlib>=0.3.12",
    "uvicorn[standard]>=0.12.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "fastapi-profiler>=1.4.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.12",
]

[tool.setuptools]
py-modules = ["uiwiz"]