[project]
name = "uiwiz"
version = "0.2.1"
description = "UiWiz is a framework to develop web applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.1",
    "markdown2[all]>=2.5.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyhumps>=3.8.0",
    "python-multipart>=0.0.22",
    "starlette>=0.49.1",
    "starlette-authlib>=0.3.15",
    "uvicorn[standard]>=0.12.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "fastapi-profiler>=1.4.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.12",
]

[tool.setuptools.package-data]
uiwiz = ["**/*"]

[tool.setuptools.exclude-package-data]

uiwiz = ["*.pyc", "__pycache__/*", "*/__pycache__/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "FAST",
    "ERA",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "CPY",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FIX",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TD",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "C90",
    "NPY",
    "PD",
    "N",
    "PERF",
    "E",
    "W",
    "DOC",
    "D",
    "F",
    "PGH",
    "PL",
    "UP",
    "FURB",
    "RUF",
    #"TRY",
]
ignore = [
    "D101",
    "D102",
    "D103",
    "EM101",
    "PLR0913",
    "SIM117",
    "S104",
    "FBT003",
]